[package]
name = "obs-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
obws = "0.11.0"
tokio = { version = "1.28.1", features = ["full"] }

[dependencies.clap]
version = "4.3.0"
features = ["cargo"]
